# python-getpaid-simulator

./: .gitignore  CONTRIBUTING.md  Dockerfile  Dockerfile.test  Dockerfile.test.dockerignore  LICENSE  Makefile  README.md  compose.test.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
.sisyphus/evidence/: task-19-cli-help.txt  task-19-cli-tests.txt  task-6-green-phase.txt  task-6-red-phase.txt
.sisyphus/notepads/getpaid-simulator/: learnings.md
docs/: changelog.md  codeofconduct.md  conf.py  index.md
src/getpaid_simulator/: __init__.py  __main__.py  app.py  plugins.py  spi.py
src/getpaid_simulator/core/: __init__.py  config.py  discovery.py  state.py  storage.py  webhooks.py
src/getpaid_simulator/providers/: __init__.py
src/getpaid_simulator/providers/paynow/: __init__.py  routes.py  signing.py  webhooks.py
src/getpaid_simulator/providers/payu/: __init__.py  routes.py  signing.py  webhooks.py
src/getpaid_simulator/ui/: routes.py
src/getpaid_simulator/ui/static/: style.css
src/getpaid_simulator/ui/templates/: authorize.html  base.html  dashboard.html
src/getpaid_simulator/ui/templates/components/: dashboard_payment_card.html  payment_card.html  status_badge.html
tests/: __init__.py  conftest.py  test_app.py  test_cli.py  test_config.py  test_discovery.py  test_legacy_provider_modules.py  test_paynow_payments.py  test_paynow_refunds.py  test_paynow_signing.py  test_paynow_webhooks.py  test_payu_lifecycle.py  test_payu_oauth.py  test_payu_orders.py  test_payu_refunds.py  test_payu_webhooks.py  test_smoke.py  test_state.py  test_storage.py  test_test_infrastructure.py  test_ui_authorize.py  test_ui_dashboard.py  test_webhooks.py
tests/e2e/: __init__.py  conftest.py  test_e2e_dashboard.py  test_e2e_payu_flow.py
