[project]
name = 'python-getpaid-simulator'
dynamic = ["version"]
description = 'Payment gateway simulator for testing the python-getpaid ecosystem.'
readme = 'README.md'
license = {text = 'MIT'}
authors = [
    {name = 'Dominik Kozaczko', email = 'dominik@kozaczko.info'},
]
requires-python = '>=3.12'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Office/Business :: Financial',
    'Topic :: Office/Business :: Financial :: Point-Of-Sale',
    'Typing :: Typed',
]
dependencies = [
    'litestar>=2.0',
    'jinja2>=3.0',
    'httpx>=0.27.0',
    'uvicorn[standard]>=0.30.0',
]

[dependency-groups]
dev = [
    'pytest>=8.0',
    'pytest-asyncio>=0.24.0',
    'pytest-cov>=5.0',
    'ruff>=0.9.0',
    'pre-commit>=4.0',
    'ty>=0.0.16',
    'litestar[testing]',
    'respx>=0.21.0',
    "playwright>=1.40.0",
    'python-getpaid-core>=3.0.0',
    'python-getpaid-payu>=3.0.0',
    'python-getpaid-paynow>=3.0.0',
    'pip-audit>=2.7.0',
]
e2e = [
    {include-group = "dev"},
]

[project.scripts]
getpaid-simulator = "getpaid_simulator.__main__:main"

[project.urls]
Homepage = 'https://github.com/django-getpaid/python-getpaid-simulator'
Repository = 'https://github.com/django-getpaid/python-getpaid-simulator'
Documentation = 'https://python-getpaid-simulator.readthedocs.io'
Changelog = 'https://github.com/django-getpaid/python-getpaid-simulator/releases'

[build-system]
requires = ['hatchling']
build-backend = 'hatchling.build'

[tool.hatch.build.targets.wheel]
packages = ['src/getpaid_simulator']

[tool.hatch.version]
path = "src/getpaid_simulator/__init__.py"

[tool.uv.sources]
python-getpaid-core = { path = "../getpaid-core", editable = true }
python-getpaid-payu = { path = "../getpaid-payu", editable = true }
python-getpaid-paynow = { path = "../getpaid-paynow", editable = true }

[tool.pytest.ini_options]
testpaths = ['tests']
asyncio_mode = 'auto'

[tool.coverage.run]
branch = true
source = ['getpaid_simulator']

[tool.coverage.report]
show_missing = true

[tool.ruff]
target-version = 'py312'
line-length = 80
src = ['src', 'tests']

[tool.ruff.lint]
select = [
    'E',    # pycodestyle errors
    'W',    # pycodestyle warnings
    'F',    # pyflakes
    'I',    # isort
    'N',    # pep8-naming
    'UP',   # pyupgrade
    'B',    # flake8-bugbear
    'A',    # flake8-builtins
    'SIM',  # flake8-simplify
    'TC',   # type-checking imports
    'RUF',  # ruff-specific
]
ignore = [
    'N818',  # Exception names match getpaid-core convention
    'B027',  # Empty methods in ABC are intentional default no-ops
]

[tool.ruff.lint.per-file-ignores]
'tests/**' = ['TC001', 'RUF012']

[tool.ruff.lint.isort]
force-single-line = true
lines-after-imports = 2
known-first-party = ['getpaid_simulator']

# --- ty type checker ---
[tool.ty.environment]
python-version = '3.12'

[tool.ty.terminal]
error-on-warning = true

[[tool.ty.overrides]]
include = ['tests/**']
[tool.ty.overrides.rules]
unresolved-attribute = 'ignore'
invalid-argument-type = 'ignore'
